--- a/Test-cours-bootstrap-Mérouze-Aurélien/CosyZénith.html
+++ b/Test-cours-bootstrap-Mérouze-Aurélien/CosyZénith.html
@@ -77,42 +77,134 @@
         <h1 class="text-center">Cosy Zénith</h1>
 
 
-        <h2 class="text-center mb-5 mt-5">Un lieu unique pour un séjour unique</h2>
+        <h2 id="sloggan" class="text-center mb-5 mt-5">Un lieu unique pour un séjour unique</h2>
         <hr>
 
-        <!-- ***************** Patchwork **************** -->
+        <!-- ***************** Carrousel **************** -->
 
-         <!-- ***************** Patchwork **************** -->
 
-         <div class="container mt-5">
+        <section>
+            <div class="container mt-lg-5 mb-lg-5">
+                <div class="row">
+                    <div class="offset-lg-1 col-lg-10">
+
+                        <div id="carouselExampleIndicators" class="carousel slide w-100" data-bs-ride="true">
+                            <div class="carousel-indicators">
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                    class="active" aria-current="true" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                    aria-label="Slide 2"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                    aria-label="Slide 3"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                                    aria-label="Slide 4"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                                    aria-label="Slide 5"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+                                    aria-label="Slide 6"></button>
+                            </div>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="Img-CosyZénith-compréssée/Pièce à vivre.jpg"
+                                        class="d-block w-100 landscape-image" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="Img-CosyZénith-compréssée/Salon.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="Img-CosyZénith-compréssée/Entrée.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="Img-CosyZénith-compréssée/Cuisine.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="Img-CosyZénith-compréssée/Chambre.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="Img-CosyZénith-compréssée/Chambre 2.jpg" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button"
+                                data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button"
+                                data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
+                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+
+                    </div>
+
+        </section>
+
+        <!-- ***************** Texte information logement **************** -->
+
+        <div class="container mt-5">
             <div class="row">
-                <div class="offset-lg-1 col-lg-10">
-                    <div class="row mb-lg-3">
-                        <div class="col-lg-5 "><img class="img-fluid h-100 w-100"
-                                src="Img-CosyZénith-compréssée/DSC00407-min.jpg" alt=""></div>
-                        <div class="col-lg-7 "><img class="img-fluid w-100"
-                                src="Img-CosyZénith-compréssée/DSC00426-min.jpg" alt=""></div>
-                    </div>
-                    <div class="row mb-lg-3">
-                        <div class="col-lg-6 "><img class="img-fluid w-100"
-                                src="Img-CosyZénith-compréssée/DSC00428-min.jpg" alt=""></div>
-                        <div class="col-lg-6 "><img class="img-fluid h-100 w-100"
-                                src="Img-CosyZénith-compréssée/DSC00432-min.jpg" alt=""></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12 "><img class="img-fluid h-100 w-100"
-                                src="Img-CosyZénith-compréssée/DSC00439-min.jpg" alt=""></div>
-                    </div>
-                </div>
+                <h3 class="text-center mb-5">A propos de ce logement</h3>
+                <div class=" offset-1 col-10 ">
+                    <p class="text-center">Un air de campagne en pleine ville !
+                        <br>
+                        A mi-chemin du Zénith, du stade Malherbe et du centre ville de Caen, vous bénéficierez d'un
+                        splendide appartement parfaitement rénové et exposé plein sud. Mais puisque rien n'est parfait
+                        sans un peu de verdure, le balcon filant vous permettra de prendre un petit déjeuner en plein
+                        air, au calme et sans aucun vis-à-vis.
 
+                    <h4 class="mt-5">Préparer votre séjour</h4>
+                    <br>
+                    <span class="fw-bold">Capacité d'accueil :</span> 2 personnes maximum.
+                    <br>
+                    <span class="fw-bold">Arrivée :</span> A partir de 15 heures.
+                    <br>
+                    <span class="fw-bold">Départ :</span> Avant 11 heures.
+                    <br>
+                    <span class="fw-bold">Minimum 2 nuits.</span> </p>
+
+                    <h5 class="mt-5 mb-5">Quelques infos...</h5>
+
+                    <p>Le linge de lit est fourni, ce qui n'est pas le cas pour les serviettes de toilette.
+                        <br>
+                        Néanmoins si vous le souhaitez, des serviettes sont à disposition moyennant un supplément de 7
+                        euros pour la durée du séjour.
+                        <br>
+                        Un des principes de la location courte durée est de procéder au nettoyage du bien à la fin du
+                        séjour.
+                        <br>
+                        Si vous ne souhaitez pas réaliser cette tâche, nous vous proposons de réaliser le ménage
+                        moyennant un montant de 30 euros.
+                    </p>
+                </div>
             </div>
-        
+        </div>
+
+        <!--Google map-->
+        <div class="container mt-lg-5 mb-lg-5">
+            <h5 class="text-center mb-5">Situer le logement</h5>
+            <div class="row offset-lg-2 col-lg-8">
+                <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2608.4984625266657!2d-0.3992451238017347!3d49.17212727857696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x480a431b4cfd11f7%3A0xf19f692a744b255e!2sAv.%20Henry%20Ch%C3%A9ron%2C%2014000%20Caen!5e0!3m2!1sfr!2sfr!4v1693771041717!5m2!1sfr!2sfr"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                </div>
+            </div>
+        </div>
+
+
 
 
         <!-- ****************** Formulaire ******************** -->
         <form>
-            <div class="container">
-                <div class="row"><h4 class="mb-5">Contactez nous</h4>
+            <div class="container mt-lg-5">
+                <div class="row">
+                    <h4 class="mb-5">Contactez nous</h4>
                     <div class="col-6">
                         <div class="mb-3">
                             <label for="inputEmail" class="form-label">Adresse email</label>
@@ -152,7 +244,7 @@
                 <div class="me-5 d-none d-lg-block">
                     <span class="fw-bold">N'hésitez pas à nous contacter avec les coordonées ci-dessous </span>
                 </div>
-           </section>
+            </section>
 
 
             <section class="">
@@ -173,20 +265,20 @@
 
 
 
-                        
-                            <div class="col-md-6">
-                                <h6 class="text-uppercase text-center fw-bold mb-4">
-                                    <i class="fas fa-gem me-3"></i>Contact
-                                </h6>
-                                <p class="text-center">
-                                    +33688011150
-                                    <br>
-                                    cosycaen@gmail.com
-                                    <br>
-                                    CaenlaMer, 14, France
-                                </p>
-                            </div>
+
+                        <div class="col-md-6">
+                            <h6 class="text-uppercase text-center fw-bold mb-4">
+                                <i class="fas fa-gem me-3"></i>Contact
+                            </h6>
+                            <p class="text-center">
+                                +33688011150
+                                <br>
+                                cosycaen@gmail.com
+                                <br>
+                                CaenlaMer, 14, France
+                            </p>
                         </div>
+                    </div>
                 </div>
             </section>
             <!-- Copyright -->
@@ -205,6 +297,20 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+J3oWYS4lq5C6mVXn5t7Jkjc4lB4WKDD8vE+sdQYIVN5g6fJ"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+J3oWYS4lq5C6mVXn5t7Jkjc4lB4WKDD8vE+sdQYIVN5g6fJ"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+J3oWYS4lq5C6mVXn5t7Jkjc4lB4WKDD8vE+sdQYIVN5g6fJ"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+J3oWYS4lq5C6mVXn5t7Jkjc4lB4WKDD8vE+sdQYIVN5g6fJ"
+        crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
