--- a/Test-cours-bootstrap-Mérouze-Aurélien/Zénit'House.html
+++ b/Test-cours-bootstrap-Mérouze-Aurélien/Zénit'House.html
@@ -35,7 +35,7 @@
                 </ul>
             </div>
         </nav> -->
-        
+
         <nav id="navbar" class="navbar navbar-expand-lg navbar-light fw-bold">
             <a class="navbar-brand" href="#">Les Logements Cosy</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -82,166 +82,219 @@
 
         <!-- ***************** Patchwork **************** -->
 
+        <section>
+            <div class="container mt-lg-5 mb-lg-5">
+                <div class="row">
+                    <div class="offset-lg-1 col-lg-10">
+
+                        <div id="carouselExampleIndicators" class="carousel slide w-100" data-bs-ride="true">
+                            <div class="carousel-indicators">
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                    class="active" aria-current="true" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                    aria-label="Slide 2"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                    aria-label="Slide 3"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                                    aria-label="Slide 4"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                                    aria-label="Slide 5"></button>
+                            </div>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="Img-Zénit'House-compréssée/cuisine-zénithouse.jpg"
+                                        class="d-block w-100 landscape-image" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="Img-Zénit'House-compréssée/salle-zénithouse.jpg" class="d-block w-100"
+                                        alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="Img-Zénit'House-compréssée/salon-zénithouse.jpg" class="d-block w-100"
+                                        alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="Img-Zénit'House-compréssée/chambre1-zénithouse.jpg" class="d-block w-100"
+                                        alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="Img-Zénit'House-compréssée/chambre2-zénithouse.jpg" class="d-block w-100"
+                                        alt="...">
+                                </div>
+
+                            </div>
+                            <button class="carousel-control-prev" type="button"
+                                data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button"
+                                data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
+                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+
+                    </div>
+
+        </section>
+
+        <!-- ***************** Texte information logement **************** -->
         <div class="container mt-5">
-            <div class="row">
-                <div class="offset-lg-1 col-lg-10">
-                    <div class="row mb-lg-3">
-                        <div class="col-lg-5 "><img class="img-fluid h-100 w-100"
-                                src="Img-Zénit'House-compréssée/cuisine-zénithouse.jpg" alt=""></div>
-                        <div class="col-lg-7 "><img class="img-fluid w-100"
-                                src="Img-Zénit'House-compréssée/salle-zénithouse.jpg" alt=""></div>
-                    </div>
-                    <div class="row mb-lg-3">
-                        <div class="col-lg-6 "><img class="img-fluid w-100"
-                                src="Img-Zénit'House-compréssée/chambre2-zénithouse.jpg" alt=""></div>
-                        <div class="col-lg-6 "><img class="img-fluid h-100 w-100"
-                                src="Img-Zénit'House-compréssée/chambre1-zénithouse.jpg" alt=""></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12 "><img class="img-fluid h-100 w-100"
-                                src="Img-Zénit'House-compréssée/salon-zénithouse.jpg" alt=""></div>
-                    </div>
-                </div>
+            <div class="row text-center">
+                <div class=" offset-1 col-10 ">
+                    <p>
+                    <h3 class="mt-5 mb-5">À propos de ce logement</h3>
 
+                    Agréable maison Cosy aux portes de Caen.
+                    <br>
+                    A moins de 5 minutes du ZENITH du Palais des sports et du parc expo de Caen, venez profiter
+                    d'une ambiance chaleureuse dans une maison cocooning située dans un petit village ayant su
+                    sauvegarder son calme et son authenticité.
+                    <br>
+                    <br>
+
+                    Maison fonctionnelle, facile à vivre, un grand salon et deux belles chambres, l'une avec un
+                    petit espace de travail et l'autre avec un espace dédié au rangement.
+                    Et une terrasse exposée sud, pour profiter des rayons du soleil et un terrain d'environ 270
+                    m2.
+                    <br>
+                    <br>
+
+                    L'ensemble de la maison et du terrain est dédié aux voyageurs.
+                    </p>
+
+
+                    <h4 class="mt-5">Préparer votre séjour</h4>
+
+                    <span class="fw-bold">Capacité d'accueil :</span> 2 chambres, 4 personnes maximum.
+                    <br>
+                    <span class="fw-bold">Arrivée :</span> A partir de 15 heures.
+                    <br>
+                    <span class="fw-bold">Départ :</span> Avant 11 heures.
+                    <br>
+                    <span class="fw-bold">Minimum 2 nuits.</span>
+
+                    <p class="mt-5">Le linge de lit est fourni, ce qui n'est pas le cas pour les serviettes de toilette.
+                        Néanmoins si vous le souhaitez des serviettes sont à disposition moyennant un supplément de
+                        5 euros pour la durée du séjour.
+
+                        Un des principes de la location courte durée est de procéder au nettoyage du bien à la fin
+                        du séjour. Si vous ne souhaitez pas réaliser cette tâche, nous vous proposons de réaliser le
+                        ménage moyennant un montant de 35 euros.
+
+                    </p>
+                </div>
             </div>
-            <!-- ***************** Texte information logement **************** -->
+        </div>
+        <!--Google map-->
+        <div class="container mt-lg-5 mb-lg-5">
+            <h5 class="text-center mb-5">Situer le logement</h5>
+            <div class="row offset-lg-2 col-lg-8">
+                <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
+
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2609.980261560832!2d-0.426948123803341!3d49.14399918056523!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x480a438d083b42c5%3A0xd79d645d6084ee0d!2sRue%20Binet%2C%2014930%20%C3%89terville!5e0!3m2!1sfr!2sfr!4v1693771432159!5m2!1sfr!2sfr"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                </div>
+            </div>
+        </div>
+
+
+        <!-- ****************** Formulaire ******************** -->
+        <form>
             <div class="container mt-5">
-                <div class="row text-center">
-                    <div class=" offset-1 col-10 ">
-                        <p>
-                        <h3 class="mt-5 mb-5">À propos de ce logement</h3>
-
-                        Agréable maison Cosy aux portes de Caen.
-                        <br>
-                        A moins de 5 minutes du ZENITH du Palais des sports et du parc expo de Caen, venez profiter
-                        d'une ambiance chaleureuse dans une maison cocooning située dans un petit village ayant su
-                        sauvegarder son calme et son authenticité.
-                        <br>
-                        <br>
-
-                        Maison fonctionnelle, facile à vivre, un grand salon et deux belles chambres, l'une avec un
-                        petit espace de travail et l'autre avec un espace dédié au rangement.
-                        Et une terrasse exposée sud, pour profiter des rayons du soleil et un terrain d'environ 270
-                        m2.
-                        <br>
-                        <br>
-
-                        L'ensemble de la maison et du terrain est dédié aux voyageurs.
-                        </p>
-
-
-                        <h4 class="mt-5">Préparer votre séjour</h4>
-
-                        <span class="fw-bold">Capacité d'accueil :</span> 2 chambres, 4 personnes maximum.
-                        <br>
-                        <span class="fw-bold">Arrivée :</span> A partir de 15 heures.
-                        <br>
-                        <span class="fw-bold">Départ :</span> Avant 11 heures.
-                        <br>
-                        <span class="fw-bold">Minimum 2 nuits.</span>
-
-                        <p class="mt-5">Le linge de lit est fourni, ce qui n'est pas le cas pour les serviettes de toilette.
-                            Néanmoins si vous le souhaitez des serviettes sont à disposition moyennant un supplément de
-                            5 euros pour la durée du séjour.
-
-                            Un des principes de la location courte durée est de procéder au nettoyage du bien à la fin
-                            du séjour. Si vous ne souhaitez pas réaliser cette tâche, nous vous proposons de réaliser le
-                            ménage moyennant un montant de 35 euros.
-
-                        </p>
+                <div class="row">
+                    <h4 class="mb-5">Contactez nous</h4>
+                    <div class="col-6">
+                        <div class="mb-3">
+                            <label for="inputEmail" class="form-label">Adresse email</label>
+                            <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">Votre e-mail ne sera pas diffusé.</div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Nom et Prénom</label>
+                            <input type="name" class="form-control" id="inputName">
+                        </div>
                     </div>
                 </div>
+                <div class="mb-3">
+                    <label for="commentaire">Ecrivez nous</label>
+                    <textarea class="form-control" placeholder="Laissez-nous votre message !" id="commentaire"
+                        style="height: 100px"></textarea>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="check">
+                            <label class="form-check-label" for="check">Valider le formulaire</label>
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <button type="submit" class="btn mb-5">Envoyer</button>
+        </form>
+        <!-- ********************* footer *************************** -->
+
+        <footer class="text-center text-lg-start bg-cosy text-muted">
+            <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+                <div class="me-5 d-none d-lg-block">
+                    <span class="fw-bold">N'hésitez pas à nous contacter avec les coordonées ci-dessous </span>
+                </div>
+            </section>
+
+
+            <section class="">
+                <div class="container text-center text-md-start mt-5">
+                    <div class="row mt-3">
+                        <div class="col-md-6">
+                            <h6 class="text-uppercase text-center fw-bold mb-4">
+                                <i class="fas fa-gem me-3"></i>Les logements Cosy
+                            </h6>
+                            <p class="text-center">
+                                Un lieu unique pour un séjour unique.
+                                <br>
+                                Les logements Cosy,
+                                <br>
+                                Vacances, Hébergements, Gites, Locations saisonnières.
+                            </p>
+                        </div>
+
+
+
+
+                        <div class="col-md-6">
+                            <h6 class="text-uppercase text-center fw-bold mb-4">
+                                <i class="fas fa-gem me-3"></i>Contact
+                            </h6>
+                            <p class="text-center">
+                                +33688011150
+                                <br>
+                                cosycaen@gmail.com
+                                <br>
+                                CaenlaMer, 14, France
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Copyright -->
+            <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.1);">
+                © 2023 Copyright:
+                <a class="text-reset fw-bold" href="aurelienmerouze@gmail.com">y1y1</a>
             </div>
-
-            <!-- ****************** Formulaire ******************** -->
-            <form>
-                <div class="container mt-5">
-                    <div class="row">
-                        <h4 class="mb-5">Contactez nous</h4>
-                        <div class="col-6">
-                            <div class="mb-3">
-                                <label for="inputEmail" class="form-label">Adresse email</label>
-                                <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp">
-                                <div id="emailHelp" class="form-text">Votre e-mail ne sera pas diffusé.</div>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="mb-3">
-                                <label for="name" class="form-label">Nom et Prénom</label>
-                                <input type="name" class="form-control" id="inputName">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="commentaire">Ecrivez nous</label>
-                        <textarea class="form-control" placeholder="Laissez-nous votre message !" id="commentaire"
-                            style="height: 100px"></textarea>
-                    </div>
-                    <div class="row">
-                        <div class="col-6">
-                            <div class="mb-3 form-check">
-                                <input type="checkbox" class="form-check-input" id="check">
-                                <label class="form-check-label" for="check">Valider le formulaire</label>
-                            </div>
-                        </div>
-
-                    </div>
-
-
-                    <button type="submit" class="btn mb-5">Envoyer</button>
-            </form>
-            <!-- ********************* footer *************************** -->
-
-            <footer class="text-center text-lg-start bg-cosy text-muted">
-                <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-                    <div class="me-5 d-none d-lg-block">
-                        <span class="fw-bold">N'hésitez pas à nous contacter avec les coordonées ci-dessous </span>
-                    </div>
-                </section>
-
-
-                <section class="">
-                    <div class="container text-center text-md-start mt-5">
-                        <div class="row mt-3">
-                            <div class="col-md-6">
-                                <h6 class="text-uppercase text-center fw-bold mb-4">
-                                    <i class="fas fa-gem me-3"></i>Les logements Cosy
-                                </h6>
-                                <p class="text-center">
-                                    Un lieu unique pour un séjour unique.
-                                    <br>
-                                    Les logements Cosy,
-                                    <br>
-                                    Vacances, Hébergements, Gites, Locations saisonnières.
-                                </p>
-                            </div>
-
-
-
-
-                            <div class="col-md-6">
-                                <h6 class="text-uppercase text-center fw-bold mb-4">
-                                    <i class="fas fa-gem me-3"></i>Contact
-                                </h6>
-                                <p class="text-center">
-                                    +33688011150
-                                    <br>
-                                    cosycaen@gmail.com
-                                    <br>
-                                    CaenlaMer, 14, France
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-                <!-- Copyright -->
-                <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.1);">
-                    © 2023 Copyright:
-                    <a class="text-reset fw-bold" href="aurelienmerouze@gmail.com">y1y1</a>
-                </div>
-                <!-- Copyright -->
-            </footer>
-            <!-- Footer -->
+            <!-- Copyright -->
+        </footer>
+        <!-- Footer -->
 
 
     </main>
