modification of nav's menu & textCaenlaMer

--- a/Test-cours-bootstrap-Mérouze-Aurélien/CaenlaMer.html
+++ b/Test-cours-bootstrap-Mérouze-Aurélien/CaenlaMer.html
@@ -10,33 +10,12 @@
 </head>
 
 <body>
-    <!-- ********************** Navbar ********************** -->
     <header>
-        <!-- <nav class="navbar navbar-expand-lg navbar-light fw-bold">
-            <a class="navbar-brand" href="index.html">Les Logements Cosy</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="NosLogements.html">Nos logements</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="NosPrestations.html">Nos prestations</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="CaenlaMer.html">CaenlaMer</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </nav> -->
+
+        <!-- ********************** Navbar with burger menu ********************** -->
+
         <nav id="navbar" class="navbar navbar-expand-lg navbar-light fw-bold">
-            <a class="navbar-brand" href="#">Les Logements Cosy</a>
+            <a class="navbar-brand" href="index.html">Les Logements Cosy</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -48,15 +27,16 @@
                             logements</a>
                         <ul class="dropdown-menu dropdown-menu">
                             <li><a class="dropdown-item" href="CosyPatio.html">Cosy Patio</a></li>
+                            <hr class="dropdown-divider bg-black">
                             <li><a class="dropdown-item" href="CosyZénith.html">Cosy Zénith</a></li>
+                            <hr class="dropdown-divider bg-black">
                             <li><a class="dropdown-item" href="Zénit'House.html">Zénit'House</a></li>
-                            <li>
-                                <hr class="dropdown-divider bg-black">
-                            </li>
-                            <li><a class="dropdown-item" href="NosPromotions.html">Nos Promotions</a></li>
                         </ul>
                     </li>
                     <a class="nav-link" href="NosPrestations.html">Nos prestations</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="NosPromotions.html">Nos promotions</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="CaenlaMer.html">CaenlaMer</a>
@@ -64,6 +44,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="Contact.html">Contact</a>
                     </li>
+
                 </ul>
             </div>
         </nav>
@@ -109,34 +90,34 @@
             <div class="container mt-5">
                 <div class="row text-center">
                     <div class=" offset-1 col-10 ">
-                        <p>Destination idéale pour des vacances inoubliables en Normandie ! 
-                            <br><br>
-                            Notre site de location saisonnière vous propose une sélection de logements de qualité pour
-                            vous offrir un séjour confortable et mémorable.
-                            <br><br>
-                            Caen la Mer est située à 2 h de Paris par le train ou l’autoroute, la ville jouit
-                            d’une situation privilégiée au bord de l’Orne avec son port de plaisance
-                            donnant en centre-ville et seulement à quelques kilomètres de la mer et des
-                            plages du débarquement.
-                            <br><br>
-                            Caen la Mer gagne en popularité, notamment grâce à son
-                            offre culturelle et patrimoniale exceptionnelle (le mémorial, le château de
-                            Guillaume le Conquérant, l’église Saint Jean…).
-                            Vous trouverez aussi des espaces verts, citons l’immense prairie située… en centre-ville !
-                            Ce qui en fait un espace idéal pour les promenades ainsi que le magnifique jardin des
-                            plantes et la colline aux oiseaux qui raviront les petits et les grands.
-                            <br><br>
-                            Caen la Mer ville moderne et dynamique dispose de tous les équipements
-                            sportifs à la pointe, centre aquatique, hippodrome, palais des sports, stade
-                            Malherbe.
-                            <br><br>
-                            Enfin la ville dispose d’un équipement à la pointe. Citons ici le Zénith, le grand
-                            parc d’attraction Festyland, la bibliothèque et bien d’autres choses que le voyageur
-                            prendra plaisir à découvrir en profitant de nos location à Caen la Mer.
-                            <br><br>
-                            Caen la Mer, ville d’art d’histoire et d’activités, le lieu parfait pour vos séjours en
-                            Normandie.
-
+                        <p>Caen la Mer
+                            <br>
+                            Votre Destination Idéale pour des Vacances Inoubliables en Normandie !
+                            <br>
+                            Découvrez notre site de location saisonnière qui vous propose une sélection de
+                            logements de qualité, garantissant un séjour confortable et mémorable.
+                            <br>
+                            Située à seulement 2 heures de Paris en train ou par autoroute, Caen la Mer bénéficie d'une
+                            situation privilégiée en bord de l'Orne, avec un port de plaisance en plein cœur de la ville
+                            et à quelques kilomètres des plages du débarquement et de la Suisse Normande.
+                            <br>
+                            La popularité croissante de Caen la Mer s'explique en grande partie par son offre culturelle
+                            et patrimoniale exceptionnelle, comprenant des sites tels que le Mémorial, le Château de
+                            Guillaume le Conquérant, l'église Saint-Jean et la bibliothèque. Vous pourrez également
+                            profiter d'espaces
+                            verts, notamment l'immense prairie au cœur de la ville, parfaite pour les promenades, ainsi
+                            que le magnifique Jardin des Plantes et la Colline aux Oiseaux, qui feront la joie des
+                            petits et des grands.
+                            <br>
+                            Caen la Mer est une ville moderne et dynamique, dotée d'installations sportives de pointe,
+                            telles qu'un centre aquatique, un hippodrome, un palais des sports et le stade Malherbe.
+                            <br>
+                            Enfin, la ville offre une gamme d'attractions exceptionnelles, notamment le Zénith, le parc
+                            d'attractions Festyland et bien d'autres découvertes à faire lors de votre
+                            séjour dans nos locations à Caen la Mer.
+                            <br>
+                            Caen la Mer est une ville d'art, d'histoire et d'activités, faisant d'elle la destination
+                            parfaite pour vos vacances en Normandie.
                         </p>
                     </div>
                 </div>
