--- a/Test-cours-bootstrap-Mérouze-Aurélien/Contact.html
+++ b/Test-cours-bootstrap-Mérouze-Aurélien/Contact.html
@@ -10,34 +10,11 @@
 </head>
 
 <body>
-    <!-- *************** Navbar ************************ -->
+    <!-- *************** Navbar with Menu Burger ************************ -->
     <header>
-        <!-- <nav class="navbar navbar-expand-lg navbar-light fw-bold">
-            <a class="navbar-brand" href="index.html">Les Logements Cosy</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="NosLogements.html">Nos logements</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="NosPrestations.html">Nos prestations</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="CaenlaMer.html">CaenlaMer</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </nav> -->
 
         <nav id="navbar" class="navbar navbar-expand-lg navbar-light fw-bold">
-            <a class="navbar-brand" href="#">Les Logements Cosy</a>
+            <a class="navbar-brand" href="index.html">Les Logements Cosy</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -49,15 +26,16 @@
                             logements</a>
                         <ul class="dropdown-menu dropdown-menu">
                             <li><a class="dropdown-item" href="CosyPatio.html">Cosy Patio</a></li>
+                            <hr class="dropdown-divider bg-black">
                             <li><a class="dropdown-item" href="CosyZénith.html">Cosy Zénith</a></li>
+                            <hr class="dropdown-divider bg-black">
                             <li><a class="dropdown-item" href="Zénit'House.html">Zénit'House</a></li>
-                            <li>
-                                <hr class="dropdown-divider bg-black">
-                            </li>
-                            <li><a class="dropdown-item" href="NosPromotions.html">Nos Promotions</a></li>
                         </ul>
                     </li>
                     <a class="nav-link" href="NosPrestations.html">Nos prestations</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="NosPromotions.html">Nos promotions</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="CaenlaMer.html">CaenlaMer</a>
@@ -65,6 +43,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="Contact.html">Contact</a>
                     </li>
+
                 </ul>
             </div>
         </nav>
@@ -72,14 +51,14 @@
     </header>
     <main>
 
- <!-- ******************* Titre *********************** -->
+        <!-- ******************* Titre *********************** -->
 
         <h1 class="text-center">Contactez nous</h1>
 
 
         <h2 class="text-center mb-5 mt-5">Un lieu unique pour un séjour unique</h2>
         <hr>
-        
+
         <!-- ****************** Formulaire ******************** -->
         <form>
             <div class="container">
