--- a/Test-cours-bootstrap-Mérouze-Aurélien/CosyPatio.html
+++ b/Test-cours-bootstrap-Mérouze-Aurélien/CosyPatio.html
@@ -10,11 +10,12 @@
 </head>
 
 <body>
-    <!-- ********************** Navbar ********************** -->
     <header>
-    
+
+        <!-- ********************** Navbar with burger menu ********************** -->
+
         <nav id="navbar" class="navbar navbar-expand-lg navbar-light fw-bold">
-            <a class="navbar-brand" href="#">Les Logements Cosy</a>
+            <a class="navbar-brand" href="index.html">Les Logements Cosy</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,15 +27,16 @@
                             logements</a>
                         <ul class="dropdown-menu dropdown-menu">
                             <li><a class="dropdown-item" href="CosyPatio.html">Cosy Patio</a></li>
+                            <hr class="dropdown-divider bg-black">
                             <li><a class="dropdown-item" href="CosyZénith.html">Cosy Zénith</a></li>
+                            <hr class="dropdown-divider bg-black">
                             <li><a class="dropdown-item" href="Zénit'House.html">Zénit'House</a></li>
-                            <li>
-                                <hr class="dropdown-divider bg-black">
-                            </li>
-                            <li><a class="dropdown-item" href="NosPromotions.html">Nos Promotions</a></li>
                         </ul>
                     </li>
                     <a class="nav-link" href="NosPrestations.html">Nos prestations</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="NosPromotions.html">Nos promotions</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="CaenlaMer.html">CaenlaMer</a>
@@ -42,9 +44,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="Contact.html">Contact</a>
                     </li>
+
                 </ul>
             </div>
         </nav>
+
     </header>
     <main>
 
