--- a/Test-cours-bootstrap-Mérouze-Aurélien/Zénit'House.html
+++ b/Test-cours-bootstrap-Mérouze-Aurélien/Zénit'House.html
@@ -10,34 +10,12 @@
 </head>
 
 <body>
-    <!-- ********************** Navbar ********************** -->
     <header>
-        <!-- <nav class="navbar navbar-expand-lg navbar-light fw-bold">
-            <a class="navbar-brand" href="index.html">Les Logements Cosy</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="NosLogements.html">Nos logements</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="NosPrestations.html">Nos prestations</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="CaenlaMer.html">CaenlaMer</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </nav> -->
+
+        <!-- ********************** Navbar with burger menu ********************** -->
 
         <nav id="navbar" class="navbar navbar-expand-lg navbar-light fw-bold">
-            <a class="navbar-brand" href="#">Les Logements Cosy</a>
+            <a class="navbar-brand" href="index.html">Les Logements Cosy</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -49,15 +27,16 @@
                             logements</a>
                         <ul class="dropdown-menu dropdown-menu">
                             <li><a class="dropdown-item" href="CosyPatio.html">Cosy Patio</a></li>
+                            <hr class="dropdown-divider bg-black">
                             <li><a class="dropdown-item" href="CosyZénith.html">Cosy Zénith</a></li>
+                            <hr class="dropdown-divider bg-black">
                             <li><a class="dropdown-item" href="Zénit'House.html">Zénit'House</a></li>
-                            <li>
-                                <hr class="dropdown-divider bg-black">
-                            </li>
-                            <li><a class="dropdown-item" href="NosPromotions.html">Nos Promotions</a></li>
                         </ul>
                     </li>
                     <a class="nav-link" href="NosPrestations.html">Nos prestations</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="NosPromotions.html">Nos promotions</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="CaenlaMer.html">CaenlaMer</a>
@@ -65,6 +44,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="Contact.html">Contact</a>
                     </li>
+
                 </ul>
             </div>
         </nav>
@@ -74,10 +54,10 @@
 
         <!-- *********************    Titre  ******************* -->
 
-        <h1 class="text-center">Zénit'House</h1>
+        <h1 class="text-center tittle">Zénit'House</h1>
 
 
-        <h2 class="text-center mb-5 mt-5">Un lieu unique pour un séjour unique</h2>
+        <h2 id="tittle" class="text-center mb-5 mt-5 tittle">Un lieu unique pour un séjour unique</h2>
         <hr>
 
         <!-- ***************** Patchwork **************** -->
@@ -178,7 +158,8 @@
                     <br>
                     <span class="fw-bold">Minimum 2 nuits.</span>
 
-                    <p class="mt-5">Le linge de lit est fourni, ce qui n'est pas le cas pour les serviettes de toilette.
+                    <p class="mt-5">Le linge de lit est fourni, ce qui n'est pas le cas pour les serviettes de
+                        toilette.
                         Néanmoins si vous le souhaitez des serviettes sont à disposition moyennant un supplément de
                         5 euros pour la durée du séjour.
 
@@ -187,6 +168,7 @@
                         ménage moyennant un montant de 35 euros.
 
                     </p>
+
                 </div>
             </div>
         </div>
@@ -288,7 +270,7 @@
                 </div>
             </section>
             <!-- Copyright -->
-            <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.1);">
+            <div class="text-center p-4" style="background-color: #BEB09A;">
                 © 2023 Copyright:
                 <a class="text-reset fw-bold" href="aurelienmerouze@gmail.com">y1y1</a>
             </div>
