--- a/Test-cours-bootstrap-Mérouze-Aurélien/index.html
+++ b/Test-cours-bootstrap-Mérouze-Aurélien/index.html
@@ -10,31 +10,9 @@
 </head>
 
 <body>
-    <!-- ********************** Navbar ********************** -->
     <header>
-        <!-- <nav id="navbar" class="navbar navbar-expand-lg navbar-light fw-bold">
-            <a class="navbar-brand" href="#">Les Logements Cosy</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="NosLogements.html">Nos logements</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="NosPrestations.html">Nos prestations</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="CaenlaMer.html">CaenlaMer</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </nav> -->
+
+        <!-- ********************** Navbar with burger menu ********************** -->
 
         <nav id="navbar" class="navbar navbar-expand-lg navbar-light fw-bold">
             <a class="navbar-brand" href="#">Les Logements Cosy</a>
@@ -49,15 +27,16 @@
                             logements</a>
                         <ul class="dropdown-menu dropdown-menu">
                             <li><a class="dropdown-item" href="CosyPatio.html">Cosy Patio</a></li>
+                            <hr class="dropdown-divider bg-black">
                             <li><a class="dropdown-item" href="CosyZénith.html">Cosy Zénith</a></li>
+                            <hr class="dropdown-divider bg-black">
                             <li><a class="dropdown-item" href="Zénit'House.html">Zénit'House</a></li>
-                            <li>
-                                <hr class="dropdown-divider bg-black">
-                            </li>
-                            <li><a class="dropdown-item" href="NosPromotions.html">Nos Promotions</a></li>
                         </ul>
                     </li>
                     <a class="nav-link" href="NosPrestations.html">Nos prestations</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="NosPromotions.html">Nos promotions</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="CaenlaMer.html">CaenlaMer</a>
@@ -65,6 +44,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="Contact.html">Contact</a>
                     </li>
+
                 </ul>
             </div>
         </nav>
