light modif in html

--- a/Test-cours-bootstrap-Mérouze-Aurélien/NosPrestations.html
+++ b/Test-cours-bootstrap-Mérouze-Aurélien/NosPrestations.html
@@ -54,7 +54,7 @@
 
 
 
-        <h1 class="text-center">Nos<br>Prestations</h1>
+        <h1 class="text-center">Nos Prestations</h1>
 
 
         <h2 class="text-center mb-5 mt-5">Un lieu unique pour un séjour unique</h2>
