--- a/Test-cours-bootstrap-Mérouze-Aurélien/NosPromotions.html
+++ b/Test-cours-bootstrap-Mérouze-Aurélien/NosPromotions.html
@@ -52,9 +52,9 @@
     </header>
     <main>
 
-        <!-- *********************    Section nos logements ******************* -->
+        <!-- *********************    Section présentation logements ******************* -->
 
-        <h1 class="text-center">Nos<br>Promotions</h1>
+        <h1 class="text-center">Nos Promotions</h1>
 
 
         <h2 class="text-center mb-5 mt-5">Un lieu unique pour un séjour unique</h2>
