--- a/Test-cours-bootstrap-Mérouze-Aurélien/Zénit'House.html
+++ b/Test-cours-bootstrap-Mérouze-Aurélien/Zénit'House.html
@@ -60,7 +60,7 @@
         <h2 id="tittle" class="text-center mb-5 mt-5 tittle">Un lieu unique pour un séjour unique</h2>
         <hr>
 
-        <!-- ***************** Patchwork **************** -->
+        <!-- ***************** Carousel **************** -->
 
         <section>
             <div class="container mt-lg-5 mb-lg-5">
@@ -83,23 +83,23 @@
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img src="Img-Zénit'House-compréssée/cuisine-zénithouse.jpg"
-                                        class="d-block w-100 landscape-image" alt="...">
+                                        class="d-block w-100 landscape-image" alt="Cuisine Zénit'House">
                                 </div>
                                 <div class="carousel-item">
                                     <img src="Img-Zénit'House-compréssée/salle-zénithouse.jpg" class="d-block w-100"
-                                        alt="...">
+                                        alt="Pièce à vivre Zénit'House">
                                 </div>
                                 <div class="carousel-item">
                                     <img src="Img-Zénit'House-compréssée/salon-zénithouse.jpg" class="d-block w-100"
-                                        alt="...">
+                                        alt="Salon Zénit'House">
                                 </div>
                                 <div class="carousel-item">
                                     <img src="Img-Zénit'House-compréssée/chambre1-zénithouse.jpg" class="d-block w-100"
-                                        alt="...">
+                                        alt="Première chambre Zénit'House">
                                 </div>
                                 <div class="carousel-item">
                                     <img src="Img-Zénit'House-compréssée/chambre2-zénithouse.jpg" class="d-block w-100"
-                                        alt="...">
+                                        alt="Seconde chambre Zénit'House">
                                 </div>
 
                             </div>
@@ -123,55 +123,59 @@
         </section>
 
         <!-- ***************** Texte information logement **************** -->
+
         <div class="container mt-5">
-            <div class="row text-center">
+            <div class="row">
+                <h3 class="text-center mb-5">A propos de ce logement</h3>
                 <div class=" offset-1 col-10 ">
-                    <p>
-                    <h3 class="mt-5 mb-5">À propos de ce logement</h3>
+                    <p class="text-center">
+                        Agréable maison Cosy aux portes de Caen.
+                        <br>
+                        A moins de 5 minutes du ZENITH du Palais des sports et du parc expo de Caen, venez profiter
+                        d'une ambiance chaleureuse dans une maison cocooning située dans un petit village ayant su
+                        sauvegarder son calme et son authenticité.
+                        <br>
+                        <br>
 
-                    Agréable maison Cosy aux portes de Caen.
-                    <br>
-                    A moins de 5 minutes du ZENITH du Palais des sports et du parc expo de Caen, venez profiter
-                    d'une ambiance chaleureuse dans une maison cocooning située dans un petit village ayant su
-                    sauvegarder son calme et son authenticité.
-                    <br>
-                    <br>
+                        Maison fonctionnelle, facile à vivre, un grand salon et deux belles chambres, l'une avec un
+                        petit espace de travail et l'autre avec un espace dédié au rangement.
+                        Et une terrasse exposée sud, pour profiter des rayons du soleil et un terrain d'environ 270
+                        m2.
+                        <br>
+                        <br>
 
-                    Maison fonctionnelle, facile à vivre, un grand salon et deux belles chambres, l'une avec un
-                    petit espace de travail et l'autre avec un espace dédié au rangement.
-                    Et une terrasse exposée sud, pour profiter des rayons du soleil et un terrain d'environ 270
-                    m2.
-                    <br>
-                    <br>
-
-                    L'ensemble de la maison et du terrain est dédié aux voyageurs.
+                        L'ensemble de la maison et du terrain est dédié aux voyageurs.
                     </p>
 
+                    </p>
 
                     <h4 class="mt-5">Préparer votre séjour</h4>
-
-                    <span class="fw-bold">Capacité d'accueil :</span> 2 chambres, 4 personnes maximum.
+                    <br>
+                    <span class="fw-bold">Capacité d'accueil :</span>2 chambres, 4 personnes maximum.
                     <br>
                     <span class="fw-bold">Arrivée :</span> A partir de 15 heures.
                     <br>
                     <span class="fw-bold">Départ :</span> Avant 11 heures.
                     <br>
-                    <span class="fw-bold">Minimum 2 nuits.</span>
+                    <span class="fw-bold">Minimum 2 nuits.</span> </p>
 
-                    <p class="mt-5">Le linge de lit est fourni, ce qui n'est pas le cas pour les serviettes de
-                        toilette.
-                        Néanmoins si vous le souhaitez des serviettes sont à disposition moyennant un supplément de
-                        5 euros pour la durée du séjour.
+                    <h5 class="mt-5 mb-5">Quelques infos...</h5>
 
-                        Un des principes de la location courte durée est de procéder au nettoyage du bien à la fin
-                        du séjour. Si vous ne souhaitez pas réaliser cette tâche, nous vous proposons de réaliser le
-                        ménage moyennant un montant de 35 euros.
-
+                    <p>Le linge de lit est fourni, ce qui n'est pas le cas pour les serviettes de toilette.
+                        <br>
+                        Néanmoins si vous le souhaitez, des serviettes sont à disposition moyennant un supplément de 7
+                        euros pour la durée du séjour.
+                        <br>
+                        Un des principes de la location courte durée est de procéder au nettoyage du bien à la fin du
+                        séjour.
+                        <br>
+                        Si vous ne souhaitez pas réaliser cette tâche, nous vous proposons de réaliser le ménage
+                        moyennant un montant de 39 euros.
                     </p>
-
                 </div>
             </div>
         </div>
+
         <!--Google map-->
         <div class="container mt-lg-5 mb-lg-5">
             <h5 class="text-center mb-5">Situer le logement</h5>
