--- a/Test-cours-bootstrap-Mérouze-Aurélien/index.html
+++ b/Test-cours-bootstrap-Mérouze-Aurélien/index.html
@@ -54,7 +54,7 @@
 
         <!-- *********************    Titre  ******************* -->
 
-        <h1 class="text-center">Les logements<br>Cosy</h1>
+        <h1 class="text-center">Les Logements<br>Cosy</h1>
 
 
         <h2 class="text-center mb-5 mt-5">Un lieu unique pour un séjour unique</h2>
@@ -68,15 +68,15 @@
                 <div class="col-lg-4"><a class="text-reset fw-bold" href="CosyPatio.html"> <br>Cosy Patio<img class="logement mt-4 mb-5 img-fluid"
                             src="Img-Patio-compréssée/chambre-patio.jpg" alt="Espace chambre Cosy Patio"></a>
                     <p class="mb-5">Venez découvrir cette suite à l'ambiance très Cosy, située idéalement à deux pas de
-                        la gare de Caen la Mer et proche de toutes commodités !</p>
+                        la gare de Caen et proche de toutes commodités !</p>
                 </div>
                 <div class="col-lg-4 "><a class="text-reset fw-bold" href="CosyZénith.html"> <br>Cosy Zénith<img class="logement mt-4 mb-5 img-fluid"
-                            src="Img-Patio-compréssée/cuisine-patio.jpg" alt="Espace repas Caen Patio"></a>
+                            src="Img-CosyZénith-compréssée/Salon.jpg" alt="Salon CosyCaen Zénith"></a>
                     <p class="mb-5">Idéalement situé à proximité du Zénith, du centre-ville et du stade d'Ornano, vous
-                        découvrirez un splendide appartement orienté plein sud et sans aucun vis à vis !</p>
+                        découvrirez ce magnifique appartement Cosy orienté plein sud et sans aucun vis à vis !</p>
                 </div>
                 <div class="col-lg-4 "><a class="text-reset fw-bold" href="Zénit'house.html"> <br>Zénit'House<img class="logement mt-4 mb-5 img-fluid"
-                            src="Img-Zénit'House-compréssée/salle-zénithouse.jpg" alt="Pièce à vivre" Zénit'House></a>
+                            src="Img-Zénit'House-compréssée/salle-zénithouse.jpg" alt="Pièce à vivre Zénit'House" Zénit'House></a>
                     <p class="mb-5">A 5 minutes en voiture du Zénith et du parc expo, cette charmante maison Cosy est
                         parfaite pour profiter des évènements organisés aux alentours !</p>
                 </div>
@@ -89,12 +89,12 @@
 
          <div class="container p-md-5">
             <div class="row">
-                <div class="col-lg-8"><a href="NosLogements.html"><img class="logement mt-5 mb-5 img-fluid" src="Img-CaenlaMer/Plage.jpg"
-                            alt="Terrasse"></a>
+                <div class="col-lg-8 "><a href="NosPrestations.html"><img class="logement mt-5 mb-5 img-fluid w-100" src="Img-CosyZénith-compréssée/Chambre.jpg"
+                            alt="Chambre Cosy Zénith"></a>
                 </div>
-                <div class="col-lg-4"><br>
+                <div class="col-lg-4 text-center"><br>
                     <p class="mb-5">
-                    <h3 class="mb-5 text-center"><a class="text-reset fw-bold" href="">Nos Prestations</a></h3>Que proposons nous ? Nous avons
+                    <h3 class="mb-5 "><a class="text-reset fw-bold" href="">Nos Prestations</a></h3>Que proposons nous ? Nous avons
                     sélectionné avec soin une gamme de logement située à Caen la Mer. Notre site de location saisonnière
                     vous propose une sélection de logements de qualité pour vous offrir un séjour confortable et
                     mémorable.</p>
@@ -109,12 +109,12 @@
             <div class="row">
                 <div class="col-lg-4"><br>
                     <p class="mb-5">
-                    <h3 class="mb-5 text-center"><a class="text-reset fw-bold" href="CaenlaMer.html">Tant à découvrir</a></h3>Bienvenue à Caen la Mer, votre destination idéale
+                    <h3 class="mb-5"><a class="text-reset fw-bold" href="CaenlaMer.html">Tant à découvrir</a></h3>Bienvenue à Caen la Mer, votre destination idéale
                     pour des vacances inoubliables en Normandie ! Caen la Mer gagne en popularité, notamment grâce à son
                     offre culturelle et patrimoniale exceptionnelle !</p>
                     <ul class="mt-5">
                         <li><a class="text-reset fw-bold"
-                                href=https://www.normandie-tourisme.fr/decouverte/histoire/d-day-et-bataille-de-normandie/les-plages-du-debarquement/"">Les
+                                href="https://www.normandie-tourisme.fr/decouverte/histoire/d-day-et-bataille-de-normandie/les-plages-du-debarquement/">Les
                                 plages du débarquements</a></li>
                         <li><a class="text-reset fw-bold" href="https://www.caenlamer-tourisme.fr/patrimoine-culturel/chateau-de-caen/">Le château
                                 de Caen</a></li>
