--- a/Test-cours-bootstrap-Mérouze-Aurélien/CosyPatio.html
+++ b/Test-cours-bootstrap-Mérouze-Aurélien/CosyPatio.html
@@ -60,31 +60,8 @@
         <h2 class="text-center mb-5 mt-5">Un lieu unique pour un séjour unique</h2>
         <hr>
 
-        <!-- ***************** Patchwork **************** -->
+        <!-- ***************** Carousel **************** -->
 
-        <!-- <div class="container mt-5">
-            <div class="row">
-                <div class="offset-lg-1 col-lg-10">
-                    <div class="row mb-lg-3">
-                        <div class="col-lg-5 "><img class="img-fluid h-100 w-100"
-                                src="Img-Patio-compréssée/salon-patio.jpg" alt=""></div>
-                        <div class="col-lg-7 "><img class="img-fluid w-100" src="Img-Patio-compréssée/chambre-patio.jpg"
-                                alt=""></div>
-                    </div>
-                    <div class="row mb-lg-3">
-                        <div class="col-lg-7 "><img class="img-fluid" src="Img-Patio-compréssée/cuisine-patio.jpg"
-                                alt=""></div>
-                        <div class="col-lg-5 "><img class="img-fluid h-100 w-100"
-                                src="Img-Patio-compréssée/salon2-patio.jpg" alt=""></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12"><img class="img-fluid"
-                                src="Img-Patio-compréssée/Terasse retouchée, recadrée.jpg" alt=""></div>
-                    </div>
-                </div>
-            </div>
-
-        </div> -->
         <section>
             <div class="container mt-lg-5 mb-lg-5">
                 <div class="row">
@@ -105,21 +82,24 @@
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="Img-Patio-compréssée/salon-patio.jpg"
-                                        class="d-block w-100 landscape-image" alt="...">
+                                    <img src="Img-Patio-compréssée/chambre-patio.jpg"
+                                        class="d-block w-100 landscape-image" alt="Chambre Cosy Patio">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="Img-Patio-compréssée/chambre-patio.jpg" class="d-block w-100" alt="...">
+                                    <img src="Img-Patio-compréssée/salon-patio.jpg" class="d-block w-100"
+                                        alt="Salon Cosy Patio">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="Img-Patio-compréssée/salon2-patio.jpg" class="d-block w-100" alt="...">
+                                    <img src="Img-Patio-compréssée/salon2-patio.jpg" class="d-block w-100"
+                                        alt="Salon Cosy Patio">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="Img-Patio-compréssée/cuisine-patio.jpg" class="d-block w-100" alt="...">
+                                    <img src="Img-Patio-compréssée/cuisine-patio.jpg" class="d-block w-100"
+                                        alt="Cuisine Cosy Patio">
                                 </div>
                                 <div class="carousel-item">
                                     <img src="Img-Patio-compréssée/Terasse retouchée, recadrée.jpg"
-                                        class="d-block w-100" alt="...">
+                                        class="d-block w-100" alt="Terasse Cosy Patio">
                                 </div>
 
                             </div>
@@ -157,6 +137,7 @@
                         Vous pourrez vous détendre en profitant de sa magnifique terrasse privative et gouter à un
                         moment de relaxation bien mérité, le tout à proximité du port de plaisance, du centre ville et
                         des rives de l'Orne.
+                    </p>
 
                     <h4 class="mt-5">Préparer votre séjour</h4>
                     <br>
@@ -184,12 +165,15 @@
                 </div>
             </div>
         </div>
-         <!--Google map-->
-         <div class="container mt-lg-5 mb-lg-5">
+        <!--Google map-->
+        <div class="container mt-lg-5 mb-lg-5">
             <h5 class="text-center mb-5">Situer le logement</h5>
             <div class="row offset-lg-2 col-lg-8">
                 <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2608.278879364328!2d-0.33990792380149304!3d49.17629447828241!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x480a683b5959ac3f%3A0xd8e7a4459da6205!2sRue%20du%20Marais%2C%20Caen!5e0!3m2!1sfr!2sfr!4v1693771525840!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2608.278879364328!2d-0.33990792380149304!3d49.17629447828241!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x480a683b5959ac3f%3A0xd8e7a4459da6205!2sRue%20du%20Marais%2C%20Caen!5e0!3m2!1sfr!2sfr!4v1693771525840!5m2!1sfr!2sfr"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
 
                 </div>
             </div>
